@@ -2299,7 +2299,7 @@ to the configfile.</p>
   </tr>
   <tr>
     <td>current.theme</td>
-    <td>last file to be loaded with /theme</td>
+    <td>set this variable to the "name" of your color theme</td>
   </tr>    
   <tr>
     <td>dcc.exists</td>
